# xscreen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-android.yml  build-windows.yml
android/: settings.gradle
android/app/: build.gradle
samples/fs19/: AchievementsScreen.xml  AnimalScreen.xml  CareerScreen.xml  CharacterCreationScreen.xml  ConnectToMasterServerScreen.xml  CreateGameScreen.xml  CreditsScreen.xml  DifficultyScreen.xml  GamepadSigninScreen.xml  InGameMenu.xml  InGameMenuAnimalsFrame.xml  InGameMenuContractsFrame.xml  InGameMenuFinancesFrame.xml  InGameMenuGameSettingsFrame.xml  InGameMenuGeneralSettingsFrame.xml  InGameMenuHelpFrame.xml  InGameMenuMapFrame.xml  InGameMenuMultiplayerFarmsFrame.xml  InGameMenuMultiplayerUsersFrame.xml  InGameMenuPricesFrame.xml  InGameMenuStatisticsFrame.xml  InGameMenuTutorialFrame.xml  InGameMenuVehiclesFrame.xml  JoinGameScreen.xml  LandscapingScreen.xml  MPLoadingScreen.xml  MainScreen.xml  MapSelectionScreen.xml  ModHubCategoriesFrame.xml  ModHubDetailsFrame.xml  ModHubItemsFrame.xml  ModHubLoadingFrame.xml  ModHubScreen.xml  ModSelectionScreen.xml  MultiplayerScreen.xml  PlacementScreen.xml  SelectMasterServerScreen.xml  ServerDetailScreen.xml  SettingsAdvancedFrame.xml  SettingsConsoleFrame.xml  (+13 more)
samples/fs19/dialogs/: AnimalDialog.xml  ColorPickerDialog.xml  DenyAcceptDialog.xml  DirectSellDialog.xml  EditFarmDialog.xml  InfoDialog.xml  MessageDialog.xml  PasswordDialog.xml  SellItemDialog.xml  ServerSettingsDialog.xml  (+7 more)
samples/fs22/: AchievementsScreen.xml  AnimalScreen.xml  CareerScreen.xml  ConnectToMasterServerScreen.xml  ConstructionScreen.xml  CreateGameScreen.xml  CreditsScreen.xml  DifficultyScreen.xml  EsportsScreen.xml  EsportsVideoScreen.xml  GamepadSigninScreen.xml  InGameMenu.xml  InGameMenuAIFrame.xml  InGameMenuAnimalsFrame.xml  InGameMenuCalendarFrame.xml  InGameMenuContractsFrame.xml  InGameMenuFinancesFrame.xml  InGameMenuGameSettingsFrame.xml  InGameMenuGeneralSettingsFrame.xml  InGameMenuHelpFrame.xml  InGameMenuMapFrame.xml  InGameMenuMultiplayerFarmsFrame.xml  InGameMenuMultiplayerUsersFrame.xml  InGameMenuPricesFrame.xml  InGameMenuProductionFrame.xml  InGameMenuStatisticsFrame.xml  InGameMenuTourFrame.xml  InGameMenuVehiclesFrame.xml  InGameMenuWeatherFrame.xml  JoinGameScreen.xml  MPLoadingScreen.xml  MainScreen.xml  MapSelectionScreen.xml  ModHubCategoriesFrame.xml  ModHubDetailsFrame.xml  ModHubItemsFrame.xml  ModHubLoadingFrame.xml  ModSelectionScreen.xml  MultiplayerScreen.xml  ScenariosScreen.xml  (+20 more)
samples/fs25/: AchievementsScreen.xml  AnimalScreen.xml  CareerScreen.xml  ConnectToMasterServerScreen.xml  ConstructionScreen.xml  CreateGameScreen.xml  CreditsScreen.xml  DifficultyScreen.xml  GamepadSigninScreen.xml  InGameMenu.xml  InGameMenuAIFrame.xml  InGameMenuAnimalsFrame.xml  InGameMenuCalendarFrame.xml  InGameMenuContractsFrame.xml  InGameMenuFinancesFrame.xml  InGameMenuGameSettingsFrame.xml  InGameMenuGeneralSettingsFrame.xml  InGameMenuHelpFrame.xml  InGameMenuHintFrame.xml  InGameMenuMainFrame.xml  InGameMenuMapFrame.xml  InGameMenuMobileMapFrame.xml  InGameMenuMobileSettingsFrame.xml  InGameMenuMultiplayerFarmsFrame.xml  InGameMenuMultiplayerUsersFrame.xml  InGameMenuPricesFrame.xml  InGameMenuProductionFrame.xml  InGameMenuStatisticsFrame.xml  InGameMenuTourFrame.xml  InGameMenuVehiclesFrame.xml  InGameMenuWeatherFrame.xml  JoinGameScreen.xml  MPLoadingScreen.xml  MainScreen.xml  MapSelectionScreen.xml  MobileSettingsScreen.xml  ModHubCategoriesFrame.xml  ModHubDetailsFrame.xml  ModHubExtraContentFrame.xml  ModHubItemsFrame.xml  (+24 more)
src/: android_main.cpp  main.cpp
src/animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
src/core/: ProfileManager.cpp  ProfileManager.h  ScreenManager.cpp  ScreenManager.h  Types.h  UIElement.cpp  UIElement.h  WidgetFactory.cpp  WidgetFactory.h  XMLParser.cpp  XMLParser.h
src/layout/: HBoxLayout.cpp  HBoxLayout.h  LayoutEngine.cpp  LayoutEngine.h  VBoxLayout.cpp  VBoxLayout.h
src/renderer/: GLESRenderer.cpp  GLESRenderer.h  RaylibRenderer.cpp  RaylibRenderer.h  Renderer.h
src/scripting/: LuaBridge.cpp  LuaBridge.h
src/widgets/: Button.cpp  Button.h  Container.cpp  Container.h  ImageWidget.cpp  ImageWidget.h  Label.cpp  Label.h  ProgressBar.cpp  ProgressBar.h  ScrollView.cpp  ScrollView.h  TextField.cpp  TextField.h
ui/fonts/: LICENSE.txt
ui/screens/: MainMenu.xml  ScreenSwitchExample.xml  SettingsScreen.xml  TestScreen.xml
ui/scripts/: mainMenu.lua  screenSwitchExample.lua  settingsScreen.lua
ui/styles/: global.xml
(+62 files in other folders)
